# cli-session-monitor

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/csm-agent/: Cargo.toml
crates/csm-agent/src/: main.rs
crates/csm-core/: Cargo.toml
crates/csm-core/src/: event.rs  lib.rs  pathmatch.rs  paths.rs
crates/csm-core/src/installer/: claude.rs  codex.rs  mod.rs
crates/csm-reporter/: Cargo.toml
crates/csm-reporter/src/: main.rs
crates/csm-reporter/src/adapter/: claude.rs  codex.rs  mod.rs
crates/csm-reporter/src/sink/: file.rs  mod.rs
crates/csm-reporter/tests/: exit_code.rs
crates/csm-watch/: Cargo.toml
crates/csm-watch/src/: codex_rollout.rs  discover.rs  fs_watch.rs  lib.rs  ntfy.rs
docs/: DESIGN.md  GUIDE.md  GUIDE.zh.md  POLISH.md  REMOTE-DESIGN.md
scripts/: gen-icon.mjs
src/: i18n.test.ts  i18n.ts  ipc.ts  main.ts  session-card.ts  settings.ts  styles.css  timer.test.ts  timer.ts  types.test.ts  types.ts  updater.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: applog.rs  config.rs  demo.rs  i18n.rs  main.rs  notify.rs  state.rs
