[workspace]
resolver = "2"
members = [
    "crates/csm-core",
    "crates/csm-reporter",
    "crates/csm-watch",
    "crates/csm-agent",
    "src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/reearner/cli-session-monitor"
description = "A lightweight desktop widget showing the live status and run time of multiple Claude Code / Codex CLI sessions."

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
