[package]
name = "cli-session-monitor"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Desktop app backend for cli-session-monitor."

[[bin]]
name = "cli-session-monitor"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
csm-core = { path = "../crates/csm-core" }
csm-watch = { path = "../crates/csm-watch" }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_Kernel",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Globalization",
    "Wdk_System_Threading",
] }

[dev-dependencies]
tempfile = "3"
