[package]
name = "csm-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared event schema and session identity for cli-session-monitor."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml_edit = "0.22"
dirs = "5"
gethostname = "0.5"

[dev-dependencies]
tempfile = "3"
