[package]
name = "csm-reporter"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Normalizes Claude Code / Codex lifecycle events into the cli-session-monitor file bus."

[[bin]]
name = "session-reporter"
path = "src/main.rs"

[dependencies]
csm-core = { path = "../csm-core" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
